--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,9 +1,23 @@
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Email address</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Your message</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
-</div>
-<button type="button" class="btn btn-primary btn-lg">Send</button>
+<head>
+	
+
+
+</head>
+
+<body>
+	
+
+	<form action="/contacts" method="POST" >
+
+			<div class="mb-3">
+			  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+			  <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+			</div>
+			<div class="mb-3">
+			  <label for="exampleFormControlTextarea1" class="form-label">Your message</label>
+			  <textarea name="message" class="form-control" id="exampleFormControlTextarea1"  rows="6"></textarea>
+			</div>
+			<button type="submit" class="btn btn-primary btn-lg">Send</button>
+	</form>
+
+</body>
