--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
 			<link rel="stylesheet" href="/1.css">
 			<script src="/scripts.js"></script>
 
-				<link rel="stylesheet" type="text/css" href="/build/jquery.datetimepicker.min.css"/ >
+				<link rel="stylesheet" type="text/css" href="/build/jquery.datetimepicker.min.css"/>
 				<!-- <script src="/jquery.js"></script> -->
 				<script src="/build/jquery.datetimepicker.full.js"></script>
 	</head>
@@ -32,9 +32,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="text-yellow" >
+        <li class="text" >
 
-        <li class="nav-item-yellow">
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/visit">Visit</a>
           
         </li>
