--- a/views/visit.erb
+++ b/views/visit.erb
@@ -6,35 +6,32 @@
 
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Ваше имя</label>
-    <input name="username" type="text" class="form-control ccc" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="напишите ваше имя" value="<%=@username%>" >
+    <input name="client[name]" type="text" class="form-control ccc" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="напишите ваше имя" value="<%= %>" >
     </div>
     <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Ваш телефон</label>
-    <input name="phone" type="text" class="form-control" id="bbb" aria-describedby="emailHelp"  placeholder="напишите ваш телефон" value="<%=@phone%>" >
+    <input name="client[phone]" type="text" class="form-control" id="bbb" aria-describedby="emailHelp"  placeholder="напишите ваш телефон" value="<%= %>" >
     </div>
     <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label" >Когда Вас ждать</label>
-    <input id="aaa" name ='date' type="text" class="form-control"  >
+    <input id="aaa" name ='client[datestamp]' type="text" class="form-control"  >
     </div>
 
-    <select class="form-select ccc" name="barber" aria-label="Default select example" value = "<%=@barber%>" >
-  <!-- <option >Выберите парикмахера</option>
-  <option >  </option>
-   <option <%= @barber == "Walter White" ? 'selected' : "Выберите парикмахера"%>>Walter White</option>
-  <option <%= @barber == "Gustavo Fring" ? 'selected' : "Выберите парикмахера"%>>Gustavo Fring</option>
-  <option <%= @barber == "Michael Ehrmantrauth" ? 'selected' : "Выберите парикмахера"%>>Michael Ehrmantrauth</option>   -->
+     <select class="form-select ccc" name="client[barber]" aria-label="Default select example" value = "<%=@barber%>" >
+   <option >Выберите парикмахера</option>
+  
 
   <% @barbers.each do |item| %>
   <option <%= @barbers == item['name'] ? 'selected' : "Выберите парикмахера"%>> <%= item['name'] %></option>
     <% end%>
       
     
-</select> 
+</select>  
 </br>
 <div class="mb-3">
   <br>
     <label  class="form-label">Выберите цвет краски</label>
-    <select id="color" name="color">
+    <select id="color" name="client[color]">
   <option value="#7bd148">Green</option>
   <option value="#5484ed">Bold blue</option>
   <option value="#a4bdfc">Blue</option>
