--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,6 +43,12 @@
           <a class="nav-link active" aria-current="page" href="/contacts">Contacts</a>
           
         </li>
+
+        <li class="nav-item">
+          
+          <a class="nav-link active" aria-current="page" href="/bookings">Writed</a>
+          
+        </li>
         <li class="nav-item">
           
           <a class="nav-link active" aria-current="page" href="/admin">Administration</a>
